Fixed a small border being visible at the top of the window (closes https://github.com/zen-browser/desktop/issues/4264)

--- a/src/browser/base/content/zen-styles/zen-browser-ui.css
+++ b/src/browser/base/content/zen-styles/zen-browser-ui.css
@@ -111,6 +111,11 @@
   z-index: 2;
 }
 
+#nav-bar {
+  /* For some reason, firefox adds a really small border to the top of the nav-bar */
+  border-top: none !important;
+}
+
 #zen-main-app-wrapper {
   background: transparent;
   overflow: hidden;
